# django-fancy-formset

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  jest.config.json  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt  vite.config.js
.github/workflows/: ci.yml  publish.yml
docs/: README.rst  api.rst  changelog.rst  conf.py  configuration.rst  events.rst  extending.rst  index.rst  installation-django.rst  installation-javascript.rst  installation.rst  requirements.in  requirements.txt
example/: README.rst  requirements.in  requirements.txt
example/project/: asgi.py  settings.py  urls.py  wsgi.py
example/project/templates/: base.html
fancy_formset/: __init__.py  formsets.py
fancy_formset/templates/fancy_formset/: default.html  div.html  p.html  table.html  ul.html
src/: formset.js  formset.scss
tests/: 01-add.html  02-edit.html  README.rst  formset.test.js
tests_django/: test_formset.py
